[package]
name = "reth-optimism-payload-builder"
version = "0.1.0"
edition = "2018"
license = "MIT"
homepage = "https://example.com"
repository = "https://github.com/yourusername/reth-optimism-payload-builder"
description = "A payload builder for op-reth that builds optimistic payloads."

[lints]
workspace = true

[dependencies]
# reth dependencies
reth-chainspec = { version = "*", workspace = true }
reth-primitives = { version = "*", workspace = true }
reth-revm = { version = "*", workspace = true }
reth-transaction-pool = { version = "*", workspace = true }
reth-provider = { version = "*", workspace = true }
reth-rpc-types = { version = "*", workspace = true }
reth-rpc-types-compat = { version = "*", workspace = true }
reth-evm = { version = "*", workspace = true }
reth-evm-optimism = { version = "*", workspace = true }
reth-execution-types = { version = "*", workspace = true }
reth-payload-builder = { version = "*", workspace = true }
reth-payload-primitives = { version = "*", workspace = true }
reth-basic-payload-builder = { version = "*", workspace = true }

# ethereum dependencies
revm = { version = "*", workspace = true }
alloy-rlp = { version = "*", workspace = true }

# miscellaneous dependencies
tracing = { version = "*", workspace = true }
thiserror = { version = "*", workspace = true }
sha2 = { version = "*", workspace = true }

[features]
optimism = [
    "reth-chainspec/optimism",
    "reth-primitives/optimism",
    "reth-provider/optimism",
    "reth-rpc-types-compat/optimism",
    "reth-evm-optimism/optimism",
    "reth-revm/optimism",
]
